--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@angular/platform-browser-dynamic": "^14.1.0",
     "@angular/router": "^14.1.0",
     "chart.js": "^2.9.4",
+    "chartjs-plugin-piechart-outlabels": "^0.1.4",
     "ng2-charts": "^2.4.2",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
